Vista subjefe,administrador, arreglo tabla registrar, aceptar y rechar solicitud modulo coordinador

--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -11,7 +11,7 @@
 </head>
 
 
-<body  onload="ConsultaDeRegistros()">
+<body  onload="consultaDeSolicitud(); consultaDeRegistro()">
     <br>
     <!-- HEADER -->
     <div id="Header">
@@ -118,7 +118,7 @@
       </div>
         <div class="row justify-content-center">
             <div class="col-25 col-lg-20 ">
-                <table class="table table-bordered table-hover" id='consulta' >
+                <table class="table table-bordered table-hover" id='consultaSolicitud' >
                   <thead id="header-table">
                       <tr>
                           <th>Acciones</th>
@@ -144,7 +144,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-25 col-lg-20 ">
-                <table class="table table-bordered table-hover" id='consulta' >
+                <table class="table table-bordered table-hover" id='consultaRegistro' >
                   <thead id="header-table">
                       <tr>
                           <th>Acciones</th>
