--- a/styles/css/registrar.css
+++ b/styles/css/registrar.css
@@ -1,9 +1,8 @@
-body{
-   background: url("../assets/img/solicitud-fondo.png");
-   background-size: 35% 40%;
+html{
+  background: url("../../assets/img/wbg.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 #header-sae{
-   background: #FFFFFFFF;
    animation-name: slideHeader;
    animation-duration: 1s;
    opacity: 0.95;
@@ -30,7 +29,7 @@ label{
    font-weight: 600;
 }
 .scrollable{
-   height: 560px;
+   height: 360px;
    overflow: scroll;
 }
 .btn{
@@ -74,7 +73,34 @@ label{
    float: right;
    font-size: 35px;
 }
-
+.boton{
+	border-radius: 11px;
+	height: 30px;
+	width: 100%;
+	border-width: 1px;
+	transition-duration: 0.3s;
+	background-color: #FFF;
+	border-color: #13673A;
+}
+.boton:hover {
+	background-color: #13673A;
+	color: #FFF;
+}
+.boton-add, .boton-del, .boton-regresar, .boton-plus{
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+		background-size: Contain;
+    border-radius: 12px;
+		border: none;
+    cursor: pointer;
+    height: 30px;
+    padding-left: 16px;
+    vertical-align: middle;
+}
+.boton-del{
+		background-image: url(../../assets/img/error.png);
+}
 #confirmacion_button_group{
 text-align: center;
 width: 100%;
@@ -118,7 +144,7 @@ width: 100%;
 @keyframes slideHeader{
     from{
        opacity: 0;
-      transform: translateY(2rem);
+      transform: translateY(5rem);
    }
     to {
        opacity: 1;
