--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -1,3 +1,7 @@
+html{
+  background: url("../../assets/img/wbg.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
 #entirePage {
 		box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
 		border-radius: 35px;
@@ -22,11 +26,14 @@
 		padding-bottom: 20px;
 		display: block;
 		margin: auto;
-		animation-name: slideModalContent;
-		animation-duration: 1s;
-		margin-top: 10rem;
-		margin-bottom: 10rem;
+		position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+
+
 
 .btn{
 		border-radius: 15px;
@@ -57,20 +64,50 @@
 	color: #FFF;
 }
 
-.botonsm{
+/* .botonsm{
 	border-radius: 11px;
 	height: 30px;
-	width: 100%;
+	width: 50%;
 	border-width: 1px;
 	transition-duration: 0.3s;
 	background-color: #FFF;
 	border-color: #13673A;
+} */
+
+.boton-add, .boton-del, .boton-regresar, .boton-plus{
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+		background-size: Contain;
+    border-radius: 12px;
+		border: none;
+    cursor: pointer;
+    height: 30px;
+    padding-left: 16px;
+    vertical-align: middle;
 }
 
-.botonsm:hover {
+.boton-regresar{
+	background-image: url(../../assets/img/regresar.png);
+	height: 50px;
+}
+
+.boton-add{
+		background-image: url(../../assets/img/exito.png);
+}
+
+.boton-del{
+		background-image: url(../../assets/img/error.png);
+}
+
+.boton-plus{
+	background-image: url(../../assets/img/mas.png);
+}
+
+/* .botonsm:hover {
 	background-color: #13673A;
 	color: #FFF;
-}
+} */
 #header-table{
 	background-color: #13673A;
 	color: #FFF;
