--- a/styles/css/solicitud_doc.css
+++ b/styles/css/solicitud_doc.css
@@ -52,7 +52,9 @@
      padding-top: 15px;
      padding-bottom: 15px;
 }
-
+.boton-del{
+		background-image: url(../../assets/img/error.png);
+}
 
 
 
