--- a/ModuloAdministrador/views/menu_alumnos.html
+++ b/ModuloAdministrador/views/menu_alumnos.html
@@ -53,7 +53,7 @@
 
 
         <div class="row justify-content-center">
-            <div class="col-25 col-lg-20 ">
+            <div class="col-25 col-lg-20 " style="overflow-y:scroll; height:350px;">
                 <table class="table table-bordered table-hover" id='consultaAlum' >
 
                   <thead id="header-table">
