Aceptar y rechazar solicitud-registro

--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -22,6 +22,56 @@
     </div>
     <!-- FIN HEADER -->
     <br>
+    <div id="comentarioAceptarS" class="modal">
+      <div id="entirePopup" class="col-md-6 col-lg-10">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1">
+              <input type="button" name="" class="boton-regresar" id="regresar">
+            </div>
+            <div class="col-md-9">
+              <h1>Aceptar solicitud</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-11">
+              <label class="preview_label">Comentario</label><br>
+              <textarea id="comentario" name="comentario" rows="8" cols="80"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <input type="button" id="agregar" name="boton" class="botonsm boton-add" value=" " >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="comentarioDenegarS" class="modal">
+      <div id="entirePopup" class="col-md-6 col-lg-10">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-9">
+              <h1>Aceptar solicitud</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-11">
+              <label class="preview_label">Comentario</label><br>
+              <textarea id="comentarioRechazar" name="comentario" rows="8" cols="80"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <input type="button" id="rechazar" name="boton" class="botonsm boton-add" value=" " >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div id="solicitudPopup" class="modal">
       <div id="entirePopup" class="col-md-6 col-lg-10">
