--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -12,7 +12,7 @@
 
 
 
-<body  >
+<body  onload="consultaDeSolicitud(); consultaDeRegistro()">
     <br>
     <!-- HEADER -->
     <div id="Header">
@@ -23,8 +23,8 @@
     <!-- FIN HEADER -->
     <br>
 
-    <div id="comentarioAceptar" class="modal">
-      <div id="entireAceptar" class="col-md-6 col-lg-10">
+    <div id="comentarioAceptarS" class="modal">
+      <div id="entirePopup" class="col-md-6 col-lg-10">
         <div class="container">
           <div class="row">
             <div class="col-md-1">
@@ -37,24 +37,23 @@
           <div class="row">
             <div class="col-md-11">
               <label class="preview_label">Comentario</label><br>
-              <textarea name="comentario" rows="8" cols="80"></textarea>
+              <textarea id="comentario" name="comentario" rows="8" cols="80"></textarea>
             </div>
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="agregar" name="boton" class="botonsm boton-add" value=" " >
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div id="comentarioDenegar" class="modal">
-      <div id="entireDenegar" class="col-md-6 col-lg-10">
+    <div id="comentarioDenegarS" class="modal">
+      <div id="entirePopup" class="col-md-6 col-lg-10">
         <div class="container">
           <div class="row">
             <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresar">
             </div>
             <div class="col-md-9">
               <h1>Rechazar solicitud</h1>
@@ -63,20 +62,67 @@
           <div class="row">
             <div class="col-md-11">
               <label class="preview_label">Comentario</label><br>
-              <textarea name="comentario" rows="8" cols="80"></textarea>
+              <textarea id="comentarioRechazar" name="comentario" rows="8" cols="80"></textarea>
             </div>
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="rechazar" name="boton" class="botonsm boton-add" value=" " >
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div id="comentarioRechazar" class="modal">
+    <div id="comentarioAceptarR" class="modal">
+      <div id="entirePopup" class="col-md-6 col-lg-10">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1">
+              <input type="button" name="" class="boton-regresar" id="regresar">
+            </div>
+            <div class="col-md-9">
+              <h1>Aceptar registro</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-11">
+              <label class="preview_label">Comentario</label><br>
+              <textarea id="comentarioR" name="comentario" rows="8" cols="80"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <input type="button" id="agregarR" name="boton" class="botonsm boton-add" value=" " >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div id="comentarioDenegarR" class="modal">
+      <div id="entirePopup" class="col-md-6 col-lg-10">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-9">
+              <h1>Rechazar registro</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-11">
+              <label class="preview_label">Comentario</label><br>
+              <textarea id="comentarioRechazarR" name="comentario" rows="8" cols="80"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <input type="button" id="rechazarR" name="boton" class="botonsm boton-add" value=" " >
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div id="solicitudPopup" class="modal">
@@ -172,14 +218,14 @@
 
     <br>
     <!-- TABLA ACTIVIDADES -->
-    <div id="entirePage" class="col-md-8 col-sm-10">
+    <<div id="entirePage" class="col-md-8 col-sm-10">
     <div class="container" >
       <div class="form-group">
           <label> <b> Solicitudes para desarrollar actividades por atender </b> </label>
       </div>
         <div class="row justify-content-center">
             <div class="col-25 col-lg-20 ">
-                <table class="table table-bordered table-hover" id='consulta' >
+                <table class="table table-bordered table-hover" id='consultaSolicitud' >
                   <thead id="header-table">
                       <tr>
                           <th>Acciones</th>
@@ -205,7 +251,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-25 col-lg-20 ">
-                <table class="table table-bordered table-hover" id='consulta' >
+                <table class="table table-bordered table-hover" id='consultaRegistro' >
                   <thead id="header-table">
                       <tr>
                           <th>Acciones</th>
@@ -227,7 +273,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-2 col-sm-2">
-            <form class="" action="../control/logoutAdmin.php">
+            <form class="" action="../control/logoutCoo.php">
             <input type="submit" name="" class="boton" value="Salir">
             </form>
           </div>
