--- a/styles/css/registrar.css
+++ b/styles/css/registrar.css
@@ -7,6 +7,14 @@ html{
    animation-duration: 1s;
    opacity: 0.95;
 }
+
+#form_titulo{
+  animation-name: slideHeader;
+  animation-duration: 1s;
+  color: #13673A;
+  text-align: center;
+}
+
 #entirePage {
    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
    border-radius: 35px;
