--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -21,8 +21,16 @@
         <script type="text/javascript">
             $("#Header").load("shared/_header-sae.php #header-sae");
         </script>
-    </div>
+    </div><br>
     <!-- FIN HEADER  -->
+
+    <div id="form_titulo" class="container">
+      <div class="row">
+        <div class="col-md-12 col-sm-12">
+          <h1>Solicitud Previa de Actividad</h1>
+        </div>
+      </div>
+    </div>
 
     <form name="entireForm" action="../control/registrarSolicitud.php" method="post" onsubmit="return validateSection_3();">
         <div style="height:30px"></div>
@@ -523,7 +531,7 @@
                         <div class="col-md-8 col-sm-8">
                             <div class="form-group">
                                 <label for="aspectoProfesional">Aspecto profesional que se fortalecera por la realizacion de esta actividad: </label>
-                                <select class="custom-select" id="aspectoProfesional">
+                                <select class="custom-select" id="aspectoProfesional" name="aspectoProfesional">
                                   <option selected disabled hidden value="0"> SELECCIONE </option>
                                   <option value="Tigre">Tigre</option>
                                   <option value="Mantis">Mantis</option>
@@ -533,6 +541,7 @@
                         </div>
 
                         <div class="col-md-8 col-sm-8">
+                          <label for="proponeAsistir">Quien propone asistir al evento: </label>
                           <select class="custom-select" id="proponeAsistir" name="proponeAsistir">
                             <option selected disabled hidden value="0"> SELECCIONE </option>
                             <option value="Coordinacion">Coordinacion</option>
