--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresar">
+              <input type="button" name="" class="boton-regresar" id="regresarS">
             </div>
             <div class="col-md-9">
               <h1>Aceptar solicitud</h1>
@@ -79,7 +79,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresar">
+              <input type="button" name="" class="boton-regresar" id="regresaR">
             </div>
             <div class="col-md-9">
               <h1>Aceptar registro</h1>
