--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -73,6 +73,58 @@
       </div>
     </div>
 
+    <div id="comentarioAceptarR" class="modal">
+      <div id="entirePopup" class="col-md-6 col-lg-10">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1">
+              <input type="button" name="" class="boton-regresar" id="regresar">
+            </div>
+            <div class="col-md-9">
+              <h1>Aceptar registro</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-11">
+              <label class="preview_label">Comentario</label><br>
+              <textarea id="comentarioR" name="comentario" rows="8" cols="80"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <input type="button" id="agregarR" name="boton" class="botonsm boton-add" value=" " >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="comentarioDenegarR" class="modal">
+      <div id="entirePopup" class="col-md-6 col-lg-10">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-9">
+              <h1>Rechazar registro</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-11">
+              <label class="preview_label">Comentario</label><br>
+              <textarea id="comentarioRechazarR" name="comentario" rows="8" cols="80"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <input type="button" id="rechazarR" name="boton" class="botonsm boton-add" value=" " >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <div id="solicitudPopup" class="modal">
       <div id="entirePopup" class="col-md-6 col-lg-10">
         <div class="container">
