mostrar matricula tabla comboBox

--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresarS">
+              <input type="button" name="" class="boton-regresar" id="regresaS">
             </div>
             <div class="col-md-9">
               <h1>Aceptar solicitud</h1>
@@ -42,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="agregar" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="agregar" name="boton"  class="botonsm boton-add" value=" " >
             </div>
           </div>
         </div>
@@ -54,6 +54,9 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
+              <div class="col-md-1">
+                <input type="button" name="" class="boton-regresar" id="regresarS">
+              </div>
             </div>
             <div class="col-md-9">
               <h1>Rechazar solicitud</h1>
@@ -105,6 +108,9 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
+              <div class="col-md-1">
+                <input type="button" name="" class="boton-regresar" id="regresarR">
+              </div>
             </div>
             <div class="col-md-9">
               <h1>Rechazar registro</h1>
