--- a/views/registrar.html
+++ b/views/registrar.html
@@ -135,7 +135,7 @@
 
                         <br>
                         <div class="scrollable">
-                            <table class="table table-bordered">
+                            <table class="table table-bordered" id="mostrarMatriculas">
                                 <thead>
                                     <tr>
                                         <td>Matricula</td>
@@ -144,7 +144,7 @@
                                         <td>Grupo</td>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id="matriculasTbody">
 
                                 </tbody>
 
