Correccion a despliegue de estado a registro de actividad

--- a/views/registrar.html
+++ b/views/registrar.html
@@ -243,9 +243,9 @@
                             <label for="aspectoProfesional">Aspecto profesional que se fortalecera por la realizacion de esta actividad: </label>
                             <select class="custom-select" id="aspectoProfesional" name="aspectoProfesional">
                               <option selected disabled hidden value="0"> SELECCIONE </option>
-                              <option value="Tigre">Tigre</option>
-                              <option value="Mantis">Mantis</option>
-                              <option value="Dragon">Dragon</option>
+                              <option value="Tecnico">Tecnico</option>
+                              <option value="Deportivo">Deportivo</option>
+                              <option value="Social">Social</option>
                             </select>
                         </div>
                     </div>
