cambios graficos comentarios

--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -70,7 +70,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="rechazar" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="rechazar" name="boton" class="botonsm boton-del" value=" " >
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="rechazarR" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="rechazarR" name="boton" class="botonsm boton-del" value=" " >
             </div>
           </div>
         </div>
