--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -55,7 +55,7 @@
             <div class="col-md-1">
             </div>
             <div class="col-md-9">
-              <h1>Aceptar solicitud</h1>
+              <h1>Rechazar solicitud</h1>
             </div>
           </div>
           <div class="row">
@@ -66,7 +66,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="rechazar" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="rechazar" name="boton" class="botonsm boton-del" value=" " >
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="rechazarR" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="rechazarR" name="boton" class="botonsm boton-del" value=" " >
             </div>
           </div>
         </div>
