--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresaS">
+              <input type="button" name="" class="boton-regresar" id="exit_sol_aceptar">
             </div>
             <div class="col-md-9">
               <h1>Aceptar solicitud</h1>
@@ -55,7 +55,7 @@
           <div class="row">
             <div class="col-md-1">
               <div class="col-md-1">
-                <input type="button" name="" class="boton-regresar" id="regresarS">
+                <input type="button" name="" class="boton-regresar" id="exit_sol_denegar">
               </div>
             </div>
             <div class="col-md-9">
@@ -82,7 +82,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresaR">
+              <input type="button" name="" class="boton-regresar" id="exit_reg_aceptar">
             </div>
             <div class="col-md-9">
               <h1>Aceptar registro</h1>
@@ -109,7 +109,7 @@
           <div class="row">
             <div class="col-md-1">
               <div class="col-md-1">
-                <input type="button" name="" class="boton-regresar" id="regresarR">
+                <input type="button" name="" class="boton-regresar" id="exit_reg_denegar">
               </div>
             </div>
             <div class="col-md-9">
