--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -27,7 +27,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresar">
+              <input type="button" name="" class="boton-regresar" id="exit_sol_aceptar">
             </div>
             <div class="col-md-9">
               <h1>Aceptar solicitud</h1>
@@ -53,6 +53,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
+              <input type="button" name="" class="boton-regresar" id="exit_sol_denegar">
             </div>
             <div class="col-md-9">
               <h1>Rechazar solicitud</h1>
@@ -78,7 +79,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresar">
+              <input type="button" name="" class="boton-regresar" id="exit_reg_aceptar">
             </div>
             <div class="col-md-9">
               <h1>Aceptar registro</h1>
@@ -104,6 +105,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-1">
+              <input type="button" name="" class="boton-regresar" id="exit_reg_denegar">
             </div>
             <div class="col-md-9">
               <h1>Rechazar registro</h1>
