--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -36,7 +36,7 @@
           <div class="row">
             <div class="col-md-11">
               <label class="preview_label">Comentario</label><br>
-              <textarea id="comentario" name="comentario" rows="8" cols="80"></textarea>
+              <textarea id="com_sol_aceptar" name="comentario" rows="8" cols="80"></textarea>
             </div>
           </div>
           <div class="row">
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-11">
               <label class="preview_label">Comentario</label><br>
-              <textarea id="comentarioRechazar" name="comentario" rows="8" cols="80"></textarea>
+              <textarea id="com_sol_denegar" name="comentario" rows="8" cols="80"></textarea>
             </div>
           </div>
           <div class="row">
@@ -88,7 +88,7 @@
           <div class="row">
             <div class="col-md-11">
               <label class="preview_label">Comentario</label><br>
-              <textarea id="comentarioR" name="comentario" rows="8" cols="80"></textarea>
+              <textarea id="com_reg_aceptar" name="comentario" rows="8" cols="80"></textarea>
             </div>
           </div>
           <div class="row">
@@ -114,7 +114,7 @@
           <div class="row">
             <div class="col-md-11">
               <label class="preview_label">Comentario</label><br>
-              <textarea id="comentarioRechazarR" name="comentario" rows="8" cols="80"></textarea>
+              <textarea id="com_reg_denegar" name="comentario" rows="8" cols="80"></textarea>
             </div>
           </div>
           <div class="row">
