Fix a query consultaRegistro

--- a/views/registrar.html
+++ b/views/registrar.html
@@ -128,7 +128,7 @@
                             <div class="input-group">
                                 <input id="ingresar_matricula" type="text" class="form-control" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
-                                    <button class="btn btn-dark" type="button" id="Agregar">Ingresar</button>
+                                    <button class="btn btn-dark" type="button" id="boton_ingresar_matricula">Ingresar</button>
                                 </div>
                             </div>
                         </div>
