Renombramiento a elementos de solicitud

--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -399,9 +399,9 @@
                             <div class="form-group">
                                 <label>INGRESAR MATRICULA DE LOS INTEGRANTES QUE ASISTIRAN:</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control form-control-lg" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2" id="matriculas">
+                                    <input type="text" class="form-control form-control-lg" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2" id="ingresar_matricula">
                                     <div class="input-group-append">
-                                        <button class="btn btn-success" id="Agregar" type="button">Agregar</button>
+                                        <button class="btn btn-success" id="boton_ingresar_matricula" type="button">Agregar</button>
                                     </div>
                                 </div>
                             </div>
