Validacion a alumno no dado de alta en agregar matricula de solicitud/registro

--- a/views/registrar.html
+++ b/views/registrar.html
@@ -287,6 +287,7 @@
           <h2 id="error2">La matricula que ingreso no existe</h2>
           <h2 id="error3">No puede ingresar su matricula en esta tabla</h2>
           <h2 id="error4">La matricula ya fue ingresada</h2>
+          <h2 id="error5">El alumno asociado con esta matricula no esta dado de alta</h2>
           <input id="ok_modalMatricula"  class="btn btn-success btn-lg" type="button" name="ok_modal" value="Ok">
         </div>
     </div>
