Admin + coordinador control fixes

--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -41,7 +41,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="agregar" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="sol_aceptar" name="boton" class="botonsm boton-add" value=" " >
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="rechazar" name="boton" class="botonsm boton-del" value=" " >
+              <input type="button" id="sol_denegar" name="boton" class="botonsm boton-del" value=" " >
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="agregarR" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="reg_aceptar" name="boton" class="botonsm boton-add" value=" " >
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="rechazarR" name="boton" class="botonsm boton-del" value=" " >
+              <input type="button" id="reg_denegar" name="boton" class="botonsm boton-del" value=" " >
             </div>
           </div>
         </div>
