--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -42,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="agregar" name="boton"  class="botonsm boton-add" value=" " >
+              <input type="button" id="sol_aceptar" name="boton"  class="botonsm boton-add" value=" " >
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="rechazar" name="boton" class="botonsm boton-del" value=" " >
+              <input type="button" id="sol_denegar" name="boton" class="botonsm boton-del" value=" " >
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="agregarR" name="boton" class="botonsm boton-add" value=" " >
+              <input type="button" id="reg_aceptar" name="boton" class="botonsm boton-add" value=" " >
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
           </div>
           <div class="row">
             <div class="col-md-3">
-              <input type="button" id="rechazarR" name="boton" class="botonsm boton-del" value=" " >
+              <input type="button" id="reg_denegar" name="boton" class="botonsm boton-del" value=" " >
             </div>
           </div>
         </div>
