Vistas previas funcionando en los niveles alumno, coordinador y administrador

--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -128,7 +128,7 @@
 
 
     <div id="solicitudPopup" class="modal">
-      <div id="entirePopup" class="col-md-6 col-lg-10">
+      <div id="entirePopup" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-7">
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-sm-6">
@@ -163,7 +163,7 @@
 
             <div class="col-md-6 col-sm-6">
               <label class="preview_label">Tema de la Visita:</label> <label id="tema_visita"></label> <br>
-              <label class="preview_label">Datos de Contacto de Empresa:</label> <label id="datos_contacto"></label>
+              <label class="preview_label">Correo de Empresa:</label> <label id="datos_contacto"></label>
             </div>
           </div> <!-- Row #3 -->
           <hr>
@@ -176,7 +176,7 @@
           <div class="row">
             <div class="col-md-6 col-sm-6">
               <label class="preview_label">Materia Fortalecida:</label> <label id="materia_fortalecida"></label> <br>
-              <label class="preview_label">Aspectol Profesiona Fortalecido:</label> <label id="aspecto_profesional"></label>
+              <label class="preview_label">Aspecto Profesional Fortalecido:</label> <label id="aspecto_profesional"></label>
             </div>
             <div class="col-md-6 col-sm-6">
               <label class="preview_label">Maestro Responsable:</label> <label id="maestro_responsable"></label> <br>
