--- a/views/registrar.html
+++ b/views/registrar.html
@@ -294,7 +294,13 @@
 
 </body>
 <!-- SCRIPTS -->
+<script src="../assets/popper/popper.min.js"></script>
 <script src="../assets/bootstrap/bootstrap.min.js"></script>
 <script src="../js/registrar.js"></script>
+<script>
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  });
+</script>
 
 </html>
