--- a/views/registrar.html
+++ b/views/registrar.html
@@ -128,7 +128,7 @@
                             <div class="input-group">
                                 <input id="ingresar_matricula" type="text" class="form-control" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
-                                    <button class="btn btn-dark" type="button" id="Agregar">Ingresar</button>
+                                    <button class="btn btn-dark" type="button" id="boton_ingresar_matricula">Ingresar</button>
                                 </div>
                             </div>
                         </div>
@@ -287,13 +287,20 @@
           <h2 id="error2">La matricula que ingreso no existe</h2>
           <h2 id="error3">No puede ingresar su matricula en esta tabla</h2>
           <h2 id="error4">La matricula ya fue ingresada</h2>
+          <h2 id="error5">El alumno asociado con esta matricula no esta dado de alta</h2>
           <input id="ok_modalMatricula"  class="btn btn-success btn-lg" type="button" name="ok_modal" value="Ok">
         </div>
     </div>
 
 </body>
 <!-- SCRIPTS -->
+<script src="../assets/popper/popper.min.js"></script>
 <script src="../assets/bootstrap/bootstrap.min.js"></script>
 <script src="../js/registrar.js"></script>
+<script>
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  });
+</script>
 
 </html>
