--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -399,9 +399,9 @@
                             <div class="form-group">
                                 <label>INGRESAR MATRICULA DE LOS INTEGRANTES QUE ASISTIRAN:</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control form-control-lg" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2" id="matriculas">
+                                    <input type="text" class="form-control form-control-lg" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2" id="ingresar_matricula">
                                     <div class="input-group-append">
-                                        <button class="btn btn-success" id="Agregar" type="button">Agregar</button>
+                                        <button class="btn btn-success" id="boton_ingresar_matricula" type="button">Agregar</button>
                                     </div>
                                 </div>
                             </div>
@@ -578,6 +578,7 @@
           <h2 id="error2">La matricula que ingreso no existe</h2>
           <h2 id="error3">No puede ingresar su matricula en esta tabla</h2>
           <h2 id="error4">La matricula ya fue ingresada</h2>
+          <h2 id="error5">El alumno asociado con esta matricula no esta dado de alta</h2>
           <input id="ok_modalMatricula"  class="btn btn-success btn-lg" type="button" name="ok_modal" value="Ok">
         </div>
     </div>
@@ -587,7 +588,13 @@
 
 </body>
 <!-- SCRIPTS -->
+<script src="../assets/popper/popper.min.js"></script>
 <script src="../assets/bootstrap/bootstrap.min.js"></script>
 <script src="../js/solicitud.js"></script>
+<script>
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  });
+</script>
 
 </html>
