Mejora de tabla consulta

--- a/ModuloAdministrador/views/menu_consultas.html
+++ b/ModuloAdministrador/views/menu_consultas.html
@@ -10,7 +10,7 @@
 </head>
 
 
-<body onload="ConsultaDeAlumnos()">
+<body onload="ConsultaDeAlumnos(); makeAllSortable();">
     <br>
     <!-- HEADER -->
     <div id="Header">
@@ -60,14 +60,14 @@
                   <thead id="header-table"  style=" ">
                       <tr>
                           <th>#</th>
-                          <th>CARRERA</th>
-                          <th>MATRICULA</th>
-                          <th>ACTIVIDADES</th>
-                          <th>VINCULACION</th>
-                          <th>CIENTIFICA</th>
-                          <th>DEPORTIVA</th>
-                          <th>SOCIAL</th>
-                          <th>CULTURAL</th>
+                          <th style="cursor: pointer;">CARRERA</th>
+                          <th style="cursor: pointer;">MATRICULA</th>
+                          <th style="cursor: pointer;">ACTIVIDADES</th>
+                          <th style="cursor: pointer;">VINCULACION</th>
+                          <th style="cursor: pointer;">CIENTIFICA</th>
+                          <th style="cursor: pointer;">DEPORTIVA</th>
+                          <th style="cursor: pointer;">SOCIAL</th>
+                          <th style="cursor: pointer;">CULTURAL</th>
                       </tr>
                   </thead>
                   <tbody style=" ">
